First complete version

--- a/dh2016.md
+++ b/dh2016.md
@@ -4,8 +4,16 @@ Paul Girard, Beatrice Dedinger, Donato Ricci,
 Benjamin Ooghe-Tabanou, Mathieu Jacomy,  
 Guillaume Plique, Gregory Tible.
 
-![logo Center History Sciences Po](img/SciencesPO_CenterHistory.png)
-![logo médialab Sciences Po](img/SciencesPO_MEDIALAB.png)
+[![logo Center History Sciences Po](img/SciencesPO_CenterHistory.png)](http://chsp.sciences-po.fr)
+[![logo médialab Sciences Po](img/SciencesPO_MEDIALAB.png)](http://medialab.sciences-po.fr)
+
+---
+
+# RICardo database
+<small>**Dedinger, B. and Girard, P.** (2016). Exploring trade globalization in the long run : the RICardo project. *Historical Methods* http://ricardo.medialab.Sciences-po.fr/Dedinger_Girard_RICardo_HistoricalMethods.pdf. (to be published)</small>
+
+# RICardo web application
+[http://ricardo.medialab.sciences-po.fr](http://ricardo.medialab.sciences-po.fr)
 
 ---
 # Bilateral trade
@@ -32,12 +40,273 @@ year by year
 ---
 # Primary sources
 
+Primary sources are compilations of customs returns published by national agencies.
+
+---
+# Primary sources - Top 7
+
 |||
 |-|-|
-|United Kingdom|Annual Statement of Trade of the United Kingdom with Foreign countries and British possessions|
-|United States of America|Foreign Commerce and Navigation of the United States|
-|Belgium|Statistique de la Belgique. Tableau général du Commerce avec le pays étrangers|
-|France|Tableau décennal du commerce de la France avec ses colonies et les puissances étrangères|
-|Spain|Estadística general del comercio exterior de España|
-|Netherlands|Statistiek van den Handel en de Scheepvaart in het Koninkrijk der Nederlanden|
-|Sweden|Sveriges officiella statistik. F.Utrikeshandel och sjöfart. Kommerskollegii underdåniga berättesle|
+|Annual Statement of Trade of the United Kingdom with Foreign countries and British possessions|United Kingdom|
+|Foreign Commerce and Navigation of the United States|United States of America|
+|Statistique de la Belgique. Tableau général du Commerce avec le pays étrangers|Belgium|
+|Tableau décennal du commerce de la France avec ses colonies et les puissances étrangères|France|
+|Estadística general del comercio exterior de España|Spain|
+|Statistiek van den Handel en de Scheepvaart in het Koninkrijk der Nederlanden|Netherlands|
+|Sveriges officiella statistik. F.Utrikeshandel och sjöfart. Kommerskollegii underdåniga berättesle|Sweden|
+
+---
+# Secondary sources
+
+Secondary sources include international compilations of trade primary sources or national compilations of national statistics that include foreign trade statistics (mainly statistical yearbooks).
+
+---
+# Secondary sources - Top 6
+|||
+|-|-|
+|Statistical Abstract for the British Empire|Barbados,Guyana (Br. Guiana),Cape Colony,Sri Lanka (Ceylon),Canada,...|
+|Statistical Abstract for the principal and other Foreign Countries|Argentina,Austria-Hungary,Bulgaria,...|
+|Statistiques du commerce extérieur|Albania,Algeria,Brazil,Sri Lanka (Ceylon),Chile,...|
+|Annales du commerce extérieur. Faits commerciaux. 3e série Avis divers|Spain,Greece,Italy,Portugal,Turkey,...|
+|Statistical Abstract of the United States|United States of America|
+|Statistical Abstract relating to British India|India|
+
+
+---
+# Estimation sources
+
+‘Estimation’ sources are works that only provide total trade data.
+
+---
+# Estimation sources - Top 4
+||||
+|-|-|-|
+|World trade, 1800-1938: a new data-set, EHES Working Paper 93|Federico G. & A. Tena-Junguito, 2016|Netherlands,India,United States of America,...|
+|International Historical Statistics|Mitchell B. R., 2007|Benin (Dahomey),Ivory Coast,Turkey,Jordan (Transjordan),Liberia,Algeria,...|
+|Statistical Abstract of Foreign Countries|Department of commerce and labor, 1909|Argentina,Austria-Hungary,Barbados,Brazil,...|
+|Historical Statistics of the United States|Carter S. B., Gartner S. S., Haines M. R., Olmstead A. L., Sutch R. & Wright G., 2006|United States of America|
+|New series of the Spanish foreign sector 1850-2000|Tena-Junguito A., 2007|Spain|
+|Portuguese Historical Statistics|Valério N., ed., 2001|Portugal|
+|Dutch GDP and its Components 1800-1913|Smits J-P., Horlings E. & van Zanden J. L., 2000|Netherlands|
+
+---
+# Currencies - Top 20
+
+|||
+|-|-|
+|sterling pound|indian rupee|
+|us dollar|italian lira|
+|french franc|japanese yen|
+|belgian franc|danish krone|
+|netherlands guilder|swiss franc|
+|german mark|philippine peso (peso fuerte)|
+|spanish peseta|finnish markka|
+|swedish krone|norwegian krone|
+|russian ruble|chinese haikwan tael|
+|chilean peso|uruguayan peso|
+
+---
+# Political entities heterogeneity
+
+|Entity|Type|
+|-|-|
+|European Russia|city/part_of|
+|British South Africa|colonial_area|
+|Kenya (British East Africa Protectorate) & Uganda|group|
+|Rio de Janeiro|city/part_of|
+|French West Africa & Togo (French Togoland)|group|
+|Java & Madura Island|group|
+|Syria & Lebanon|group|
+|Alexandria|city/part_of|
+
+---
+
+![RICardo database schema](img/ricardo_schema.svg)
+
+---
+# data flow
+
+~~MS Access~~  
+git(CSVs) + python scripts => sqlite  
+  
+Complete database to be released on github in 2017
+
+---
+# RICardo database volumetry
+
+- 294138 flows
+- 1492 RICentities
+- 152 years
+- 120 currencies
+- 7206 exchange rates to £
+- 73 source types (919 volumes)
+
+---
+# Exploratory Data Analysis
+
+« The greatest value of a picture is when it
+forces us to notice what we never expected to
+see. »  
+John W. Tukey
+  
+<small>**Tukey, J. W.** (1977). *Exploratory Data Analysis*. Addison-Wesley Publishing Company.</small>
+
+---
+# Exploring complexity through a datascape
+
+- Dedicated interactive data visualisations
+- Propose different focus on the database
+- Handle complexity through dynamic exploration
+  
+
+<small>**Leclercq, C. and Girard, P.** (2013). *The Experiments in Art and Technology Datascape*. Collections Électroniques de l’INHA. Actes de Colloques et Livres En Ligne de l’Institut National D’histoire de L’art. INHA http://inha.revues.org/4926 (accessed 27 October 2015). </small>
+
+
+---
+# Building a datascape
+
+Worshops called *«data sprints»* with:
+
+- historians
+- economists 
+- developers
+- designers
+
+Addressing **content**, **implementation** and **design** issues  
+ at the same time, in the same place. 
+
+---
+# How to explore complexity ? 
+
+*Three progressive focus:*
+
+**World** > **Country** > **Bilateral**  
+
+*one visual documentation:*
+
+**Metadata**
+
+---
+# Visualizing historical data issues
+
+- How to inform about *data discrepancies* ?
+- How to aggregate *partial datasets* ?
+- How to deal with *data alternatives* ?
+- How to deal with *data heterogeneity* ?
+
+---
+#How to inform about data discrepancies ?
+*the metadata view*
+
+---
+<!-- .slide: data-background-image="img/metadata_view.png"-->
+<a href="http://localhost:8000/#/metadata" target="_blank" style="background: black; padding:20px">the metadata view</a>
+
+---
+# How to aggregate partial datasets ?
+*different ways of handling null values*
+
+---
+# 0 ≠ null
+![A broken curve because of null values](img/0_null.png)
+
+---
+
+<!-- .slide: data-transition="none"-->
+#123 + null = null
+![United Kingdom, total trade imports, 1900-1938](img/sum_null_imports.png)
+United Kingdom, total trade **imports**, 1900-1938
+
+---
+
+<!-- .slide: data-transition="none"-->
+#123 + null = null
+![United Kingdom, total trade exports, 1900-1938 ](img/sum_null_exports.png)
+United Kingdom, total trade **exports**, 1900-1938  
+**Missing values in 1914-1923 period**
+
+---
+
+<!-- .slide: data-transition="none"-->
+#123 + null = null
+![United Kingdom, total trade total, 1900-1938 ](img/sum_null_total.png)
+United Kingdom, total trade **total**, 1900-1938  
+**Missing exports implies missing total in 1914-1923 period**
+
+---
+#123 + null + 411 = 534 (2/3)
+![World total trade](img/null_indicators.png)
+Reveal number of available data points   
+to contextualize agregation of partial data
+
+---
+# How to deal with *data alternatives* ?
+
+*How the world trade evolves through the 19th century ?* 
+
+Combining three ways to estimate total trade : 
+
+1. recent estimation
+2. reported totals
+3. sum of partner flows
+
+= WorldBestGuess flows
+
+---
+<!-- .slide: data-transition="none"-->
+# Cuba Total trade variations
+![Cuba Total trade variations 1831-1839](img/world_trade_variations.png)
+
+---
+<!-- .slide: data-transition="none"-->
+# Cuba Total trade Best Guess
+![Cuba Total trade variations 1831-1839](img/world_trade_variations_bestguess.png)
+
+---
+# How to deal with *data alternatives* ?
+
+![bilateral trade data model](img/bilateraltrade.svg)
+
+---
+# Biateral discrepancy indicator
+
+![bilateral trade discrepancy indicator between Spain and France](img/bilateral.png)
+
+<small>**Dedinger, B.** (2012). The Franco-German trade puzzle: an analysis of the economic consequences of the Franco-Prussian war1: THE FRANCO-GERMAN TRADE PUZZLE. *The Economic History Review*, 65(3): 1029–54 doi:10.1111/j.1468-0289.2011.00604.x.</small>
+
+---
+# How to deal with data heterogeneity ?
+*taking the example of political entities*
+
+---
+<!-- .slide: data-background-image="img/partners_heterogeneity.png"-->
+
+---
+# What about Prussia, Zollverein and Germany ? 
+![Belgium trade to Prussia, Zollverein and Germany](img/Belgium_prussia_zollverein_germany.png)
+
+---
+# Visual Exploratory Data Analysis to
+
+- disseminate the database value
+- produce precise time series
+- help the everlasting data cleaning process
+
+---
+
+# Produce your own understanding of 19th century World trade
+
+<a href="http://127.0.0.1:8000" target="_blank">http://ricardo.medialab.sciences-po.fr</a>
+
+---
+# Open Science
+
+- download related papers from home page
+- download the visualizations' datasets in csv
+- complete dataset to be released in 2007
+- source code: [github.com/medialab/ricardo](http://github.com/medialab/ricardo)
+- this presentation: [http://medialab.github.io/ricardo](http://medialab.github.io/ricardo)       
+  <br>
+# Thank you for your attention
+  
+Paul Girard - paul.girard@sciencespo.fr - @paulanomalie
