--- a/dh2016.md
+++ b/dh2016.md
@@ -22,7 +22,8 @@ Trade flows between political entities
 A <⋅⋅> B
 
 ---
-<!-- .slide: data-background="img/bilateraltrade.svg" -->
+# Bilateral trade
+![bilateral trade data model](img/bilateraltrade.svg)<!-- .element: style="width:50%"-->
 Note:bilateral trade data model
 
 ---
@@ -43,7 +44,7 @@ year by year
 Primary sources are compilations of customs returns published by national agencies.
 
 ---
-# Primary sources - Top 7
+# Primary sources - Top 7 on 19
 
 |||
 |-|-|
@@ -61,7 +62,7 @@ Primary sources are compilations of customs returns published by national agenci
 Secondary sources include international compilations of trade primary sources or national compilations of national statistics that include foreign trade statistics (mainly statistical yearbooks).
 
 ---
-# Secondary sources - Top 6
+# Secondary sources - Top 6 on 26
 |||
 |-|-|
 |Statistical Abstract for the British Empire|Barbados,Guyana (Br. Guiana),Cape Colony,Sri Lanka (Ceylon),Canada,...|
@@ -78,7 +79,7 @@ Secondary sources include international compilations of trade primary sources or
 ‘Estimation’ sources are works that only provide total trade data.
 
 ---
-# Estimation sources - Top 4
+# Estimation sources - Top 4 on 28
 ||||
 |-|-|-|
 |World trade, 1800-1938: a new data-set, EHES Working Paper 93|Federico G. & A. Tena-Junguito, 2016|Netherlands,India,United States of America,...|
@@ -90,7 +91,7 @@ Secondary sources include international compilations of trade primary sources or
 |Dutch GDP and its Components 1800-1913|Smits J-P., Horlings E. & van Zanden J. L., 2000|Netherlands|
 
 ---
-# Currencies - Top 20
+# Currencies - Top 20 on 120
 
 |||
 |-|-|
@@ -126,19 +127,25 @@ Secondary sources include international compilations of trade primary sources or
 ---
 # data flow
 
-~~MS Access~~  
-git(CSVs) + python scripts => sqlite  
-  
-Complete database to be released on github in 2017
+~~MS Access~~
+
+CSV files + python scripts = sqlite  
+
+version control system for CSV files 
+    
+Complete dataset to be released on github in 2017
+
+---
+<!-- .slide: data-background-image="img/github_data.png"-->
 
 ---
 # RICardo database volumetry
 
-- 294138 flows
-- 1492 RICentities
+- 294,138 flows
+- 1,492 RICentities
 - 152 years
 - 120 currencies
-- 7206 exchange rates to £
+- 7,206 exchange rates to £
 - 73 source types (919 volumes)
 
 ---
@@ -264,8 +271,7 @@ Combining three ways to estimate total trade :
 
 ---
 # How to deal with *data alternatives* ?
-
-![bilateral trade data model](img/bilateraltrade.svg)
+![bilateral trade data model](img/bilateraltrade.svg)<!-- .element: style="width:50%"-->
 
 ---
 # Biateral discrepancy indicator
