--- a/dh2016.md
+++ b/dh2016.md
@@ -197,7 +197,7 @@ Addressing **content**, **implementation** and **design** issues
 # Visualizing historical data issues
 
 - How to inform about *data discrepancies* ?
-- How to aggregate *partial datasets* ?
+- How to aggregate *incomplete datasets* ?
 - How to deal with *data alternatives* ?
 - How to deal with *data heterogeneity* ?
 
@@ -210,7 +210,7 @@ Addressing **content**, **implementation** and **design** issues
 <a href="http://localhost:8000/#/metadata" target="_blank" style="background: black; padding:20px">the metadata view</a>
 
 ---
-# How to aggregate partial datasets ?
+# How to aggregate incomplete datasets ?
 *different ways of handling null values*
 
 ---
@@ -253,7 +253,7 @@ to contextualize agregation of partial data
 
 Combining three ways to estimate total trade : 
 
-1. recent estimation
+1. recent estimations
 2. reported totals
 3. sum of partner flows
 
@@ -309,7 +309,7 @@ Combining three ways to estimate total trade :
 
 - download related papers from home page
 - download the visualizations' datasets in csv
-- complete dataset to be released in 2007
+- complete dataset to be released in 2017
 - source code: [github.com/medialab/ricardo](http://github.com/medialab/ricardo)
 - this presentation: [http://medialab.github.io/ricardo](http://medialab.github.io/ricardo)       
   <br>
