relecture de Béatrice

--- a/dh2016.md
+++ b/dh2016.md
@@ -18,7 +18,7 @@ Guillaume Plique, Gregory Tible.
 ---
 # Bilateral trade
 
-Trade flows between political entities  
+Trade flows between entities  
 A <⋅⋅> B
 
 ---
@@ -29,7 +29,7 @@ Note:bilateral trade data model
 ---
 # Total trade
 
-Trade flows between potilical entities and the World  
+Trade flows between entity A and the world
 A <⋅⋅> W
 
 ---
@@ -62,33 +62,35 @@ Primary sources are compilations of customs returns published by national agenci
 Secondary sources include international compilations of trade primary sources or national compilations of national statistics that include foreign trade statistics (mainly statistical yearbooks).
 
 ---
-# Secondary sources - Top 6 on 26
+# Secondary sources - Top 5 on 26
 |||
 |-|-|
 |Statistical Abstract for the British Empire|Barbados,Guyana (Br. Guiana),Cape Colony,Sri Lanka (Ceylon),Canada,...|
 |Statistical Abstract for the principal and other Foreign Countries|Argentina,Austria-Hungary,Bulgaria,...|
-|Statistiques du commerce extérieur|Albania,Algeria,Brazil,Sri Lanka (Ceylon),Chile,...|
-|Annales du commerce extérieur. Faits commerciaux. 3e série Avis divers|Spain,Greece,Italy,Portugal,Turkey,...|
+|Statistiques du commerce extérieur, Société des Nations|Albania,Algeria,Brazil,Sri Lanka (Ceylon),Chile,...|
+|Annales du commerce extérieur. Faits commerciaux. 3e série Avis divers, Ministère de l'Agriculture, du Commerce et des Travaux Publics|Spain,Greece,Italy,Portugal,Turkey,...|
 |Statistical Abstract of the United States|United States of America|
-|Statistical Abstract relating to British India|India|
-
 
 ---
 # Estimation sources
 
 ‘Estimation’ sources are works that only provide total trade data.
 
+
 ---
-# Estimation sources - Top 4 on 28
-||||
-|-|-|-|
-|World trade, 1800-1938: a new data-set, EHES Working Paper 93|Federico G. & A. Tena-Junguito, 2016|Netherlands,India,United States of America,...|
-|International Historical Statistics|Mitchell B. R., 2007|Benin (Dahomey),Ivory Coast,Turkey,Jordan (Transjordan),Liberia,Algeria,...|
-|Statistical Abstract of Foreign Countries|Department of commerce and labor, 1909|Argentina,Austria-Hungary,Barbados,Brazil,...|
-|Historical Statistics of the United States|Carter S. B., Gartner S. S., Haines M. R., Olmstead A. L., Sutch R. & Wright G., 2006|United States of America|
-|New series of the Spanish foreign sector 1850-2000|Tena-Junguito A., 2007|Spain|
-|Portuguese Historical Statistics|Valério N., ed., 2001|Portugal|
-|Dutch GDP and its Components 1800-1913|Smits J-P., Horlings E. & van Zanden J. L., 2000|Netherlands|
+# Estimation sources - Top 8 on 28
+
+|||
+|-|-|
+|International Historical Statistics, Mitchell, 2007|Ivory Coast,Turkey,Algeria,...|
+|Statistical Abstract of Foreign Countries, Department of commerce and labor, 1909|Argentina,Austria-Hungary,...|
+|Historical Statistics of the United States, Carter et al, 2006|United States of America|
+|British Historical Statistics, Mitchell, 2011|United Kingdom|
+|New series of the Spanish foreign sector 1850-2000, Tena-Junguito, 2007|Spain|
+|Portuguese Historical Statistics, Valério, 2001|Portugal|
+|Dutch GDP and its Components 1800-1913, Smits et al., 2000|Netherlands|
+|Deutschlands Aussenhandel 1815-1870, Bondi, 1958|Germany|
+
 
 ---
 # Currencies - Top 20 on 120
@@ -107,7 +109,7 @@ Secondary sources include international compilations of trade primary sources or
 |chilean peso|uruguayan peso|
 
 ---
-# Political entities heterogeneity
+# Entities heterogeneity
 
 |Entity|Type|
 |-|-|
@@ -119,6 +121,9 @@ Secondary sources include international compilations of trade primary sources or
 |Java & Madura Island|group|
 |Syria & Lebanon|group|
 |Alexandria|city/part_of|
+
+---
+# exchange rates
 
 ---
 
@@ -172,7 +177,7 @@ John W. Tukey
 ---
 # Building a datascape
 
-Worshops called *«data sprints»* with:
+Workshop called *«data sprints»* with:
 
 - historians
 - economists 
@@ -274,7 +279,7 @@ Combining three ways to estimate total trade :
 ![bilateral trade data model](img/bilateraltrade.svg)<!-- .element: style="width:50%"-->
 
 ---
-# Biateral discrepancy indicator
+# Bilateral discrepancy indicator
 
 ![bilateral trade discrepancy indicator between Spain and France](img/bilateral.png)
 
@@ -282,7 +287,7 @@ Combining three ways to estimate total trade :
 
 ---
 # How to deal with data heterogeneity ?
-*taking the example of political entities*
+*taking the example of entities*
 
 ---
 <!-- .slide: data-background-image="img/partners_heterogeneity.png"-->
