added exchange rates excerpt

--- a/dh2016.md
+++ b/dh2016.md
@@ -109,6 +109,18 @@ Secondary sources include international compilations of trade primary sources or
 |chilean peso|uruguayan peso|
 
 ---
+# Exchange rates to £ (excerpt)
+|year|currency|rate to £|source|
+|-|-|-|-|
+|1848|us dollar|4.87|Currency_Denzel (2010), 417-420.|
+|1920|belgian franc|48.8042947779|Currency_Schneider et al. (1997), vol II, p. 35.|
+|1817|french franc|24.409|Currency_From Denzel (2010), 285-289.|
+|1896|netherlands guilder|12.105|Currency_Denzel (2010), 69-72.|
+|1885|german mark|20.406|Currency_Denzel (2010), 243-244.|
+|1815|spanish peseta|22.3690189088|Currency_Schneider et al (1991), vol I, II, London on Madrid, 3 months, pp. 43-46|
+
+
+---
 # Entities heterogeneity
 
 |Entity|Type|
@@ -121,9 +133,6 @@ Secondary sources include international compilations of trade primary sources or
 |Java & Madura Island|group|
 |Syria & Lebanon|group|
 |Alexandria|city/part_of|
-
----
-# exchange rates
 
 ---
 
