--- a/dh2016.md
+++ b/dh2016.md
@@ -153,6 +153,11 @@ Complete dataset to be released on github in 2017
 <!-- .slide: data-background-image="img/github_data.png"-->
 
 ---
+<!-- .slide: data-background-image="img/internetarchive_statisticalabstract.png"-->
+<a href="https://archive.org/stream/statisticalabstr2318grea#page/166/mode/2up" target="_blank" style="background:black; padding:20px">Statistical abstract, P. 166 @ Internet Archive</a>
+
+
+---
 # RICardo database volumetry
 
 - 294,138 flows
@@ -221,7 +226,7 @@ Addressing **content**, **implementation** and **design** issues
 
 ---
 <!-- .slide: data-background-image="img/metadata_view.png"-->
-<a href="http://localhost:8000/#/metadata" target="_blank" style="background: black; padding:20px">the metadata view</a>
+<a href="http://ricardo.medialab.sciences-po.fr/#/metadata" target="_blank" style="background: black; padding:20px">the metadata view</a>
 
 ---
 # How to aggregate incomplete datasets ?
@@ -229,10 +234,19 @@ Addressing **content**, **implementation** and **design** issues
 
 ---
 # 0 ≠ null
-![A broken curve because of null values](img/0_null.png)
+![A broken curve because of null values (wrong value in 1887 & 1888)](img/0_null_oups.png)  
+   
+
+^ oups !  <!-- .element: class="fragment" data-fragment-index="1"-->  
 
 ---
+# 0 ≠ null
+![A broken curve because of null values](img/0_null_fixed.png)  
+  
+\- better -
 
+
+---
 <!-- .slide: data-transition="none"-->
 #123 + null = null
 ![United Kingdom, total trade imports, 1900-1938](img/sum_null_imports.png)
@@ -309,6 +323,7 @@ Combining three ways to estimate total trade :
 # Visual Exploratory Data Analysis to
 
 - disseminate the database value
+- easily explore its complexity
 - produce precise time series
 - help the everlasting data cleaning process
 
@@ -316,7 +331,7 @@ Combining three ways to estimate total trade :
 
 # Produce your own understanding of 19th century World trade
 
-<a href="http://127.0.0.1:8000" target="_blank">http://ricardo.medialab.sciences-po.fr</a>
+<a href="http://ricardo.medialab.sciences-po.fr" target="_blank">http://ricardo.medialab.sciences-po.fr</a>
 
 ---
 # Open Science
