debrieffing with Daniele

--- a/dh2016.md
+++ b/dh2016.md
@@ -16,9 +16,15 @@ Guillaume Plique, Gregory Tible.
 [http://ricardo.medialab.sciences-po.fr](http://ricardo.medialab.sciences-po.fr)
 
 ---
+# the 19th century
+
+year by year  
+1787 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1938
+
+---
 # Bilateral trade
 
-Trade flows between entities  
+Trade flows between ~~countries~~ entities  
 A <⋅⋅> B
 
 ---
@@ -29,14 +35,8 @@ Note:bilateral trade data model
 ---
 # Total trade
 
-Trade flows between entity A and the world
+Trade flows between entity A and the world  
 A <⋅⋅> W
-
----
-# the 19th century
-
-year by year  
-1787 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1938
 
 ---
 # Primary sources
@@ -233,6 +233,8 @@ Addressing **content**, **implementation** and **design** issues
 *different ways of handling null values*
 
 ---
+
+<!-- .slide: data-transition="none"-->
 # 0 ≠ null
 ![A broken curve because of null values (wrong value in 1887 & 1888)](img/0_null_oups.png)  
    
@@ -240,6 +242,7 @@ Addressing **content**, **implementation** and **design** issues
 ^ oups !  <!-- .element: class="fragment" data-fragment-index="1"-->  
 
 ---
+<!-- .slide: data-transition="none"-->
 # 0 ≠ null
 ![A broken curve because of null values](img/0_null_fixed.png)  
   
