using austria-hungary / UK example in bilateral

--- a/dh2016.md
+++ b/dh2016.md
@@ -229,7 +229,8 @@ Addressing **content**, **implementation** and **design** issues
 <a href="http://ricardo.medialab.sciences-po.fr/#/metadata" target="_blank" style="background: black; padding:20px">the metadata view</a>
 
 ---
-# How to aggregate incomplete datasets ?
+# How to aggregate 
+# incomplete datasets ?
 *different ways of handling null values*
 
 ---
@@ -307,9 +308,13 @@ Combining three ways to estimate total trade :
 ---
 # Bilateral discrepancy indicator
 
-![bilateral trade discrepancy indicator between Spain and France](img/bilateral.png)
+![bilateral trade discrepancy indicator between Austria-Hungary and United Kingdom](img/bilateral.png)
 
 <small>**Dedinger, B.** (2012). The Franco-German trade puzzle: an analysis of the economic consequences of the Franco-Prussian war1: THE FRANCO-GERMAN TRADE PUZZLE. *The Economic History Review*, 65(3): 1029–54 doi:10.1111/j.1468-0289.2011.00604.x.</small>
+  
+  
+<small>**Don, Y.** (1968). Comparability of International Trade Statistics: Great Britain and Austria-Hungary
+before World War I. *The Economic History Review* 21:78-92.</small>
 
 ---
 # How to deal with data heterogeneity ?
