adding DH2016 ref

--- a/dh2016.md
+++ b/dh2016.md
@@ -5,7 +5,9 @@ Benjamin Ooghe-Tabanou, Mathieu Jacomy,
 Guillaume Plique, Gregory Tible.
 
 [![logo Center History Sciences Po](img/SciencesPO_CenterHistory.png)](http://chsp.sciences-po.fr)
-[![logo médialab Sciences Po](img/SciencesPO_MEDIALAB.png)](http://medialab.sciences-po.fr)
+[![logo médialab Sciences Po](img/SciencesPO_MEDIALAB.png)](http://medialab.sciences-po.fr)  
+  
+  Digital Humanities 2016, Krakow, 11-16 July 2016
 
 ---
 
