[client] Drafts exchange rates page
Details:
- Adds new controller+partials for page `rates`
- Updates navbar so that data-related pages are all grouped together
- Echange rates page displays fully implemented inputs to select a
currency, a sorting method and a query filter for displayed curves
- Curves are not implemented yet, only the currency names are displayed
- Also drafts data conversion utils (not tested yet)

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -115,6 +115,10 @@
   "WORLD_LINES_1": "Dans ce graphique, le ",
   "WORLD_LINES_2": " d'un pays est le ",
   "WORLD_TRADE": "commerce total",
+  "RATES_INTRO": "Exchange rates",
+  "RATES_INTRO_PARA": "Exchange rates propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
+  "RATES_TITLE": "Évolution des taux de change par rapport à ",
+  "RATES_TITLE_SORTED_BY": " triés par ",
   "COUNTRY_VIEW_INTRO": "La Country vue montre comment le commerce total d’un pays déclarant se répartit entre les différentes entités partenaires. Elle compare les entités partenaires d’après leur part moyenne dans le commerce total du pays déclarant, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce du pays déclarant avec une sélection d’entités partenaires.",
   "COUNTRY_TITLE_1": "Commerce total du reporting ",
   "COUNTRY_INTRO_TITLE": "Country",
