[client] Drafts exchange rate curves
Details:
- New directive exchangeRateCurves
- Directive deals with initial and incremental rendering
- Basic curves drawing, tooltips

Also:
- Two new order methods in rates controller

TODO:
- Check rates conversion (visibly not working)
- Check rates display in curves compared to tooltips
- Improve URLs management in rates controller

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -116,9 +116,14 @@
   "WORLD_LINES_2": " d'un pays est le ",
   "WORLD_TRADE": "commerce total",
   "RATES_INTRO": "Exchange rates",
-  "RATES_INTRO_PARA": "Exchange rates propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
-  "RATES_TITLE": "Évolution des taux de change par rapport à ",
+  "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
+  "RATES_TITLE": "Taux de change par rapport à ",
   "RATES_TITLE_SORTED_BY": " triés par ",
+  "RATES_SORT_ALPHA":  "nom (A à Z)",
+  "RATES_SORT_ALPHA_REVERSED": "nom (Z à A)",
+  "RATES_SORT_HIGHEST_RATE":  "taux maximum (décroissant)",
+  "RATES_SORT_AVERAGE_RATE": "taux moyen (décroissant)",
+  "NO_CURRENCY": "Aucune monnaie ne correspond à ces critères de recherche.",
   "COUNTRY_VIEW_INTRO": "La Country vue montre comment le commerce total d’un pays déclarant se répartit entre les différentes entités partenaires. Elle compare les entités partenaires d’après leur part moyenne dans le commerce total du pays déclarant, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce du pays déclarant avec une sélection d’entités partenaires.",
   "COUNTRY_TITLE_1": "Commerce total du reporting ",
   "COUNTRY_INTRO_TITLE": "Country",
