--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -116,14 +116,17 @@
   "WORLD_LINES_2": " d'un pays est le ",
   "WORLD_TRADE": "commerce total",
   "RATES_INTRO": "Exchange rates",
-  "RATES_INTRO_PARA": "La vue \"exchange rates\" propose de comparer l'évolution du taux de change entre une monnaie sélectionnée et toutes les autres, sur toute la durée représentée par le corpus.",
-  "RATES_TITLE": "Taux de change par rapport à ",
-  "RATES_TITLE_SORTED_BY": " triés par ",
-  "RATES_SORT_ALPHA":  "nom (A à Z)",
-  "RATES_SORT_ALPHA_REVERSED": "nom (Z à A)",
-  "RATES_SORT_HIGHEST_RATE":  "taux maximum (\uD83E\uDC56)",
-  "RATES_SORT_AVERAGE_RATE": "taux moyen (\uD83E\uDC56)",
-  "NO_CURRENCY": "Aucune monnaie ne correspond à ces critères de recherche.",
+  "RATES_INTRO_PARA": "The \"exchange rates\"  view compares the evolution of exchange rates between a selected currency and all the other ones, on the whole period represented in the corpus.",
+  "RATES_TITLE": "Rates to ",
+  "RATES_TITLE_SORTED_BY": " variations, ordered by ",
+  "RATES_SORT_ALPHA":  "name (A to Z)",
+  "RATES_SORT_ALPHA_REVERSED": "name (Z to A)",
+  "RATES_SORT_HIGHEST_RATE":  "maximum value (\uD83E\uDC56)",
+  "RATES_SORT_AVERAGE_RATE": "average value (\uD83E\uDC56)",
+  "SELECT_RATES_SORT": "Order by",
+  "SELECT_CURRENCY": "Compare to",
+  "NO_CURRENCY": "No currency matches these search settings.",
+  "IN_YEAR": "In",
   "COUNTRY_VIEW_INTRO": "La Country vue montre comment le commerce total d’un pays déclarant se répartit entre les différentes entités partenaires. Elle compare les entités partenaires d’après leur part moyenne dans le commerce total du pays déclarant, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce du pays déclarant avec une sélection d’entités partenaires.",
   "COUNTRY_TITLE_1": "Commerce total du reporting ",
   "COUNTRY_INTRO_TITLE": "Country",
