[client] Caption, wording and locale for statuses

--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -135,6 +135,12 @@
   "COUNTRY_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
   "COUNTRY_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
   "COUNTRY_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
+  "STATUSES_TITLE": "Statuts politiques du reporting",
+  "STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du reporting sélectionné sur la période, ainsi que ses périodes de souveraineté.",
+  "DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
+  "SOVEREIGNTY_CAPTION": "Périodes de souveraineté",
+  "DEPENDENCY": "dépendance",
+  "DEPENDENCIES": "dépendances",
   "PARTNER_HISTO_1": "Commerce de ",
   "PARTNER_HISTO_2": " avec ses partneraires ",
   "PARTNER_HISTO_ORDER_BY": "Ordonné par ",
