--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -135,6 +135,12 @@
   "COUNTRY_PARTNER_HISTO": "In this graph, the partners of the reporting country are compared by calculating two indicators:",
   "COUNTRY_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
   "COUNTRY_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
+  "STATUSES_TITLE": "Political statuses of reporting",
+  "STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of sovereignty.",
+  "DEPENDENCIES_CAPTION": "Number of dependencies",
+  "SOVEREIGNTY_CAPTION": "Periods of sovereignty",
+  "DEPENDENCY": "dependency",
+  "DEPENDENCIES": "dependencies",
   "PARTNER_HISTO_1": "Trade of ",
   "PARTNER_HISTO_2": " with partners ",
   "PARTNER_HISTO_ORDER_BY": "Order by ",
