[client] Renames COUNTRY as REPORTING
Details:
- `country` controller, partial and service become `reporting`
- `countryStatuses` directive becomes `politicalStatuses`
- Routes `#!/country/:country` becomes `#!/reporting/:reporting`, but
the old route redirects to the new
- Renames translation keys and contents to match those changes

--- a/client/src/public/i18n/locale-en-EN.json
+++ b/client/src/public/i18n/locale-en-EN.json
@@ -4,7 +4,7 @@
   "HOME_INTRO_PARA": "RICardo (Research on International Commerce) is a project dedicated to trade between nations over a period spanning the beginning of the Industrial Revolution to the eve of the Second World War. It combines a historical trade database covering all of the world’s countries and a website which invites to an exploration of the history of international trade through data visualizations.",
   "HOME_METADATA_PARA": "Metadata provides an overview of  bilateral and total trade data availability",
   "HOME_WORLD_PARA": "World provides different historical series of world trade and its breakdown by countries",
-  "HOME_COUNTRY_PARA": "Country depicts the distribution of trade  by partners of a country",
+  "HOME_REPORTING_PARA": "Reporting depicts the distribution of trade  by partners of a reporting",
   "HOME_BILATERAL_PARA": "Bilateral focuses on trade between two countries and allows for a comparison between their trade statistics",
   "HOME_SCIENCE_TITLE": "Open Science",
   "HOME_SCIENCE_LEAD": "Tools and data produced in the RICardo project are in free access:",
@@ -127,14 +127,14 @@
   "SELECT_CURRENCY": "Comparer à",
   "NO_CURRENCY": "Aucune monnaie ne correspond à ces critères de recherche.",
   "IN_YEAR": "En",
-  "COUNTRY_VIEW_INTRO": "The Country view shows the total trade of a reporting country with all its partners. It compares partner entities according to their average share in the reporting country’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
-  "COUNTRY_TITLE_1": "Total trade of reporting ",
-  "COUNTRY_INTRO_TITLE": "Country",
-  "COUNTRY_INTRO_PARA": "Country focuses on the  distribution of trade by partners of a reporting country. This view compares the partner entities according to their share in the reporting country’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
-  "COUNTRY_VIEW_DUAL_LEGEND": "In this graph, total trade equals the sum of export (import) flows with all partner entities.",
-  "COUNTRY_PARTNER_HISTO": "In this graph, the partners of the reporting country are compared by calculating two indicators:",
-  "COUNTRY_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
-  "COUNTRY_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
+  "REPORTING_VIEW_INTRO": "The Reporting view shows the total trade of a reporting with all its partners. It compares partner entities according to their average share in the reporting’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
+  "REPORTING_TITLE_1": "Total trade of reporting ",
+  "REPORTING_INTRO_TITLE": "Reporting",
+  "REPORTING_INTRO_PARA": "Reporting focuses on the  distribution of trade by partners of a reporting. This view compares the partner entities according to their share in the reporting’s total trade, calculates the annual bilateral trade balance and tracks the growth of trade with selected partners.",
+  "REPORTING_VIEW_DUAL_LEGEND": "In this graph, total trade equals the sum of export (import) flows with all partner entities.",
+  "REPORTING_PARTNER_HISTO": "In this graph, the partners of the reporting are compared by calculating two indicators:",
+  "REPORTING_PARTNER_HISTO_1": "the average bilateral trade share estimated for available years over the selected period",
+  "REPORTING_PARTNER_HISTO_2": "the relative bilateral trade balance estimated for each available year over the selected period",
   "STATUSES_TITLE": "Political statuses of reporting",
   "STATUSES_INTRO": "This chart represents the evolution of the selected reporting's dependencies count. It also shows the periods of sovereignty.",
   "DEPENDENCIES_CAPTION": "Number of dependencies",
