--- a/client/src/public/i18n/locale-fr-FR.json
+++ b/client/src/public/i18n/locale-fr-FR.json
@@ -4,7 +4,7 @@
   "HOME_INTRO_PARA": "RICardo (Research on International Commerce) est un projet dédié au commerce entre nations sur une période allant des débuts de la Révolution industrielle à la veille de la Seconde Guerre mondiale. Il allie une base historique de données commerciales couvrant tous les pays du monde à un site web qui propose une exploration de l’histoire du commerce international à partir de visualisations.",
   "HOME_METADATA_PARA": "Metadata offre une vue d’ensemble de la disponibilité des données de commerce total et bilatéral",
   "HOME_WORLD_PARA": "World propose différentes séries historiques du commerce mondial et leur répartition par pays",
-  "HOME_COUNTRY_PARA": "Country décrit la répartition par partenaires du commerce d’un pays",
+  "HOME_REPORTING_PARA": "Reporting décrit la répartition par partenaires du commerce d’un reporting",
   "HOME_BILATERAL_PARA": "Bilateral se concentre sur le commerce entre deux pays et permet une comparaison de leurs statistiques commerciales",
   "HOME_SCIENCE_TITLE": "Science Ouverte",
   "HOME_SCIENCE_LEAD": "Les outils et données produites dans le cadre du projet RICardo sont librement accessibles :",
@@ -127,14 +127,14 @@
   "SELECT_CURRENCY": "Compare to",
   "NO_CURRENCY": "No currency matches these search settings.",
   "IN_YEAR": "In",
-  "COUNTRY_VIEW_INTRO": "La Country vue montre comment le commerce total d’un pays déclarant se répartit entre les différentes entités partenaires. Elle compare les entités partenaires d’après leur part moyenne dans le commerce total du pays déclarant, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce du pays déclarant avec une sélection d’entités partenaires.",
-  "COUNTRY_TITLE_1": "Commerce total du reporting ",
-  "COUNTRY_INTRO_TITLE": "Country",
-  "COUNTRY_INTRO_PARA": "Country détaille la répartition  par partenaires du commerce d’un pays rapporteur. Cette vue compare les entités partenaires suivant leur part dans le commerce total du pays rapporteur, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce avec une sélection de partenaires.",
-  "COUNTRY_VIEW_DUAL_LEGEND": "Dans ce graphique, le commerce total est égal à la somme des flux exportations (importations)  avec toutes les entités partenaires.",
-  "COUNTRY_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
-  "COUNTRY_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
-  "COUNTRY_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
+  "REPORTING_VIEW_INTRO": "La vue Reporting montre comment le commerce total d’un pays déclarant se répartit entre les différentes entités partenaires. Elle compare les entités partenaires d’après leur part moyenne dans le commerce total du pays déclarant, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce du pays déclarant avec une sélection d’entités partenaires.",
+  "REPORTING_TITLE_1": "Commerce total du reporting ",
+  "REPORTING_INTRO_TITLE": "Reporting",
+  "REPORTING_INTRO_PARA": "Reporting détaille la répartition  par partenaires du commerce d’un pays rapporteur. Cette vue compare les entités partenaires suivant leur part dans le commerce total du pays rapporteur, calcule le solde commercial bilatéral annuel et permet de suivre l’évolution du commerce avec une sélection de partenaires.",
+  "REPORTING_VIEW_DUAL_LEGEND": "Dans ce graphique, le commerce total est égal à la somme des flux exportations (importations)  avec toutes les entités partenaires.",
+  "REPORTING_PARTNER_HISTO": "Dans ce graphique, on compare les partenaires du pays déclarant en calculant deux indicateurs:",
+  "REPORTING_PARTNER_HISTO_1": "la part moyenne du commerce bilatéral estimé pour les années disponibles au cours de la période sélectionnée",
+  "REPORTING_PARTNER_HISTO_2": "le solde commercial bilatéral relatif estimé pour chaque année disponible sur la période sélectionnée",
   "STATUSES_TITLE": "Statuts politiques du reporting",
   "STATUSES_INTRO": "Ce graphique représente l'évolution du nombre d'entités dépendantes du reporting sélectionné sur la période, ainsi que ses périodes de souveraineté.",
   "DEPENDENCIES_CAPTION": "Nombre d'entités dépendantes",
